[metadata]
name = eds-utils
version = attr: eds_utils.__version__
description =  Utilities for editing CANopen EDS/DCF files
long_description = file: README.rst
url = https://github.com/ryanpdx/eds-utils
author = ryanpdx
maintainer = ryanpdx
license = GPL-3.0
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Embedded Systems

[options]
packages = find:
install_requires =
    PyGObject
python_requires = >=3.7

[options.entry_points]
console_scripts =
    eds-editor = eds_utils.eds_editor:eds_editor
    eds-validate = eds_utils.eds_validate:eds_validate
    eds2dcf = eds_utils.eds2dcf:eds2dcf
    eds2md = eds_utils.eds2md:eds2md
    eds2rst = eds_utils.eds2rstf:eds2rst
