[metadata]
name = eds-utils
version = attr: eds_utils.__version__
description =  Utilities for editing CANopen EDS/DCF files
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/oresat/eds-utils
author = psas
author_email = oresat@pdx.edu
maintainer = psas
maintainer_email = oresat@pdx.edu
license = GPL-3.0
license_files = LICENSE
classifiers =
    Environment :: X11 Applications :: GTK
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Embedded Systems

[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
UI =
    PyGObject

[options.entry_points]
console_scripts =
    eds-editor = eds_utils.eds_editor.main:eds_editor
    eds-validate = eds_utils.eds_validate:eds_validate
    eds2c = eds_utils.eds2c:eds2c
    eds2dcf = eds_utils.eds2dcf:eds2dcf
    eds2md = eds_utils.eds2md:eds2md
    eds2rst = eds_utils.eds2rstf:eds2rst
    eds-autofix = eds_utils.eds_autofix:eds_autofix
    eds-merge = eds_utils.eds_merge:eds_merge
